fix color in dark mode

--- a/web/src/search/panels/PanelContainer.scss
+++ b/web/src/search/panels/PanelContainer.scss
@@ -47,7 +47,11 @@
         }
 
         .footer {
-            background: rgba($color-light-bg-2, 0.4);
+            background: rgba($color-bg-2, 0.4);
+
+            .theme-light & {
+                background: rgba($color-light-bg-2, 0.4);
+            }
         }
     }
 }
